--- a/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
+++ b/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
@@ -84,7 +84,7 @@ If you want to manually interact with your smart-contract via *EOSFactory*, firs
 python3
 ```
 
-Inside the Python CLI initialize a local testnet, create reference to it, then build your smart-contract (if needed), and finally deploy it:
+Inside the Python CLI initialize a local testnet, create a reference to your smart-contract, then build it, and finally deploy it:
 
 ```
 from eosfactory.eosf import *
