--- a/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
+++ b/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
@@ -4,7 +4,7 @@ The purpose of this tutorial is to demonstrate how to apply *EOSFactory* to an e
 
 ## Prerequisites
 
-* You have successfully installed *EOSFactory* on your machine, including all its dependencies, such as Python, PIP and EOSIO. For further details please refer to [this guide](https://eosfactory.io/build/html/tutorials/01.InstallingEOSFactory.html).
+* This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 * Your smart-contract project is located inside a folder named `foo_project`.
 * Your smart-contract's C++ source code is contained in a file named `foo_source.cpp`, located anywhere inside the `foo_project` folder (it can also be located in a subfolder inside the `foo_project` folder).
 * If your project requires a C++ header file, it's contained in a file named `foo_header.hpp`, located anywhere inside the `foo_project` folder (it can also be located in a subfolder inside the `foo_project` folder).
