changed tutorials 01 and 02
Tutorial 01
- Addedd info about Brew package on MacOS
- Canged info about termcolor package
- included correct output on instalation verification
- changed info about PyPi (made clearer)
Tutorial 02
- rewritten info about test accounts
- rewritten info on non-unique variables

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -12,6 +12,8 @@ We've tested *EOSFactory* on the following platforms:
 
 We assume that you have successfully installed [*EOSIO*](https://github.com/EOSIO/eos) v1.7.1 on your machine. Binary installation suffices.
 
+>**NOTE:** On *MacOS* [Brew](https://brew.sh/) is required for the EOSIO instalation.
+
 *EOSIO* deployed in Docker is NOT supported.
 
 Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/eosio.cdt) v1.6.1. Binary installation suffices.
@@ -30,7 +32,7 @@ Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/e
 
 ## Python dependencies
 
-EOSFactory depends on the following not standard Python packages:
+EOSFactory depends on the *termcolor* non standard Python package. It can be installed by running:
 
 ```bash
 pip3 install --user termcolor
@@ -89,6 +91,31 @@ Now let's verify that EOSFactory works and is properly hooked up to *EOSIO*:
 ```bash
 python3 -m eosfactory.config
 ```
+The correct output should be similar to this:
+
+```bash
+EOSFactory version 3.1.1.
+Dependencies:
+https://github.com/EOSIO/eos version 1.7.1
+https://github.com/EOSIO/eosio.cdt version 1.6.1
+Python version 3.5 or higher
+
+    EOSFactory package is installed as a link to the directory:
+    '/mnt/c/Workspaces/EOS/eosfactory/eosfactory/'
+
+The current configuration of EOSFactory:
+{
+    "CONFIG_FILE": "/mnt/c/Workspaces/EOS/eosfactory/config/config.json",
+    "EOSIO_CDT_VERSION": [
+        "1.6.1"
+    ],
+    "EOSIO_CLI_EXECUTABLE": "cleos",
+    "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
+    "EOSIO_CPP": "eosio-cpp",
+    "EOSIO_CPP_DIR": "/usr/opt/eosio.cdt/1.6.1/",
+..........................................
+..........................................
+```
 
 Now, you can try tests. Make sure your working directory is switched to `eosfactory`:
 
@@ -105,7 +132,7 @@ python3 tests/tic_tac_toe.py
 ```
 
 ## Install from PyPi repository
-Since the `v3.0.0` release, *EOSFactory* supports installation with the `pip3` installer. *EOSFactory* installed as a plain Python module is stripped of the goods that come with the GitHub repository, mentioned above:
+Since the `v3.0.0` release, *EOSFactory* supports installation with the `pip3` installer. *EOSFactory* installed as a plain Python module does not contain such additional features, that can be obtained via the GitHub repository only:
 * test scripts,
 * tutorials, some of them executable.
 
