--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -84,13 +84,13 @@ You don't need to worry about locking or unlocking the wallet, managing its pass
 
 ## Create accounts
 
-If you need to create test accounts, here is how you do it:
+Test accounts can be created using such command:
 
 ```python
 create_account("charlie", master)
 ```
 
-> A lot actions happen:
+> Such actions happen while creating an account:
 >* the given account name is checked for uniqueness, if positive, break;
 >* a random physical name of the new account is determined;
 >* two pairs of cryptographic keys are produced;
@@ -99,7 +99,7 @@ create_account("charlie", master)
 >* a new account is send to the blockchain;
 >* confirmation from the blockchain is received.
 
-Again, a global (in the current script) variable, this time called `charlie`, is created and from now on you can use it anywhere in the code, for example:
+Again, a global (in the current script) variable, this time called `charlie`, is created and from now on can be used anywhere in the code, for example:
 
 ```python
 charlie.info()
@@ -113,7 +113,7 @@ However, if you want to assign a specific name to an account, you can still do i
 create_account("charlie2", master, account_name="charlie4eos")
 ```
 
->**NOTE:** You cannot create the same account variable twice (EOSFactory protect yourself against non-uniqueness), that's why we use a different name for the variable to be created, i.e. `charlie2`.
+>**NOTE:** You cannot create the same account variable twice (EOSFactory protects yourself against non-uniqueness), that's why we use a different name for the variable to be created, i.e. `charlie2`.
 
 And then run the `info()` command to verify that the `charlie4eos` name is actually assigned to the account referenced by the `charlie2` variable:
 
@@ -150,7 +150,7 @@ smart = Contract(host, "eosio_token")
 
 ## Build the contract
 
-Before deploying the contract needs to be built from the source code. To build the contract invoke its `build()` method:
+Before deploying, the contract needs to be built from the source code. To build the contract invoke its `build()` method:
 
 ```python
 smart.build()
