Fixed as per stefanzarembinski comments
docs/tutorials/01.InstallingEOSFactory.md line 35
nonstandard
docs/tutorials/01.InstallingEOSFactory.md line 135
coma before "that"
docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md line 15
"python3_1" changed to "python3"

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -32,7 +32,7 @@ Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/e
 
 ## Python dependencies
 
-EOSFactory depends on the *termcolor* non standard Python package. It can be installed by running:
+EOSFactory depends on the *termcolor* nonstandard Python package. It can be installed by running:
 
 ```bash
 pip3 install --user termcolor
@@ -132,7 +132,7 @@ python3 tests/tic_tac_toe.py
 ```
 
 ## Install from PyPi repository
-Since the `v3.0.0` release, *EOSFactory* supports installation with the `pip3` installer. *EOSFactory* installed as a plain Python module does not contain such additional features, that can be obtained via the GitHub repository only:
+Since the `v3.0.0` release, *EOSFactory* supports installation with the `pip3` installer. *EOSFactory* installed as a plain Python module does not contain such additional features that can be obtained via the GitHub repository only:
 * test scripts,
 * tutorials, some of them executable.
 
