--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -5,7 +5,7 @@ The purpose of this tutorial is to demonstrate how to install *EOSFactory* on an
 We've tested *EOSFactory* on the following platforms:
 
 - Ubuntu 18.04 (Bionic)
-- MacOS 10.13 (High Sierra_1)
+- MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
 ## General prerequisites
