update, all tested

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -71,7 +71,7 @@ git clone https://github.com/tokenika/eosfactory.git
 Open a WSL bash terminal and navigate to the `eosfactory` folder:
 
 ```bash
-cd /mnt/d/Workspaces/EOS/eosfactory
+cd /mnt/c/Workspaces/EOS/eosfactory
 ```
 
 Then run the `install` script by pointing it to the *EOSIO* source code:
@@ -80,7 +80,7 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 ./install.sh
 ```
 
-When prompted, supply the path pointing to the location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
+When prompted, supply the path pointing to the location of your smart-contract workspace, e.g. `/mnt/c/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
 ## Verify the installation
 
@@ -128,7 +128,7 @@ python3 -m eosfactory.config
 In the printout, you'll see a note about the nature of the active package:
 
 ```bash
-EOSFactory version 3.1.1.
+EOSFactory version 3.1.2.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
@@ -196,7 +196,7 @@ python3 -m eosfactory.config
 As a result, you should get data similar to this:
 
 ```bash
-EOSFactory version 3.1.1.
+EOSFactory version 3.1.2.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
@@ -270,14 +270,14 @@ setup.is_raise_error = True
 
 ### Verify command lines
 
-Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it makes sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_line` sets the debugging status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
+Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it makes sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_lines` sets the debugging status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
 
 ```python
         import eosfactory.core.setup as setUp   ## added
-        setup.is_print_command_line = True      ## added
+        setup.is_print_command_lines = True      ## added
         smart.build()
         smart.deploy()
-        setup.is_print_command_line = False     ## added
+        setup.is_print_command_lines = False     ## added
 ```
 
 Now, if you run the script, you can see raw bash commands that can be inspected and tried:
@@ -290,6 +290,7 @@ WASM file writen to file:
 ######## command line sent to cleos:
 /usr/bin/cleos --url http://127.0.0.1:8888 set contract kswquviprmbi /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd build/_wslqwjvacdyugodewiyd.wasm build/_wslqwjvacdyugodewiyd.abi
 ```
+Note that there is another facility, corresponding to the `eosfactory.core.setup.is_print_command_lines` setting: it is `eosfactory.core.setup.is_save_command_lines`. If set, all the command lines are printed to the file `command_lines.txt` in the current working directory.
 
 ### Verify communication with cleos
 
@@ -297,13 +298,13 @@ EOSFactory offers another debugging tool: printing requests send by `cleos` to `
 
 ```python
         import eosfactory.core.setup as setUp   ## added
-        setup.is_print_command_line = True      ## added
+        setup.is_print_command_lines = True      ## added
         setup.is_print_request = True           ## added
         # setup.is_print_response = True        ## volume printout
         smart.build()
         smart.deploy()
         setup.is_print_request = False          ## added
-        setup.is_print_command_line = False     ## added
+        setup.is_print_command_lines = False     ## added
         setup.is_print_response = False         ## added
 ```
 
