--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -8,6 +8,8 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be combined 
 
 - We assume that you are familiar with the material covered in [Interacting with EOS Contracts in *EOSFactory*](02.InteractingWithEOSContractsInEOSFactory.html).
 
+- We assume that you have [cmake](https://cmake.org/) installed.
+
 - We also assume you have [Visual Studio Code](https://code.visualstudio.com/) installed. If you are on Windows and run VSC for the first time, in order to get access to *Windows Subsystem for Linux* bash terminal inside VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option: <br><br>
     `
     "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
@@ -67,7 +69,7 @@ What you get is a complete smart-contract workspace with clear separation betwee
 
 With *EOSFactory* you can use [CMake](https://cmake.org/) routines to compile, build and unit test a contract. 
 
-First open a bash terminal inside VSC (navigate to `View -> Integrated Terminal`), and switch to the `build` folder:
+First open a bash terminal inside VSC (navigate to `View -> Terminal`), and switch to the `build` folder:
 
 ```bash
 cd build
