--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -14,6 +14,8 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be combined 
     `<br><br>
 Alternatively, you can execute the command `bash` in the terminal.
 
+- We assume that you have [cmake](https://cmake.org/) installed.
+
 - Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the standard way to compile and deploy smart-contracts in EOS. What we present here is an alternative.
 
 ## Create a new smart-contract VSC project
@@ -67,7 +69,7 @@ What you get is a complete smart-contract workspace with clear separation betwee
 
 With *EOSFactory* you can use [CMake](https://cmake.org/) routines to compile, build and unit test a contract. 
 
-First open a bash terminal inside VSC (navigate to `View -> Integrated Terminal`), and switch to the `build` folder:
+First open a bash terminal inside VSC (navigate to `View -> Terminal`), and switch to the `build` folder:
 
 ```bash
 cd build
