--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -32,10 +32,11 @@ Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/e
 
 ## Python dependencies
 
-EOSFactory depends on the *termcolor* nonstandard Python package. It can be installed by running:
+EOSFactory depends on *termcolor* and *psutil* nonstandard Python packages. It can be installed by running:
 
 ```bash
 pip3 install --user termcolor
+pip3 install --user psutil
 ```
 
 ## Install on Ubuntu & MacOS
@@ -94,7 +95,7 @@ python3 -m eosfactory.config
 The correct output should be similar to this:
 
 ```bash
-EOSFactory version 3.1.1.
+EOSFactory version 3.2.0.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
@@ -155,7 +156,7 @@ python3 -m eosfactory.config
 In the printout, you'll see a note about the nature of the active package:
 
 ```bash
-EOSFactory version 3.1.3.
+EOSFactory version 3.2.0.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
@@ -223,7 +224,7 @@ python3 -m eosfactory.config
 As a result, you should get data similar to this:
 
 ```bash
-EOSFactory version 3.1.3.
+EOSFactory version 3.2.0.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
