--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -38,6 +38,7 @@ EOSFactory depends on *termcolor* and *psutil* nonstandard Python packages. It c
 pip3 install --user termcolor
 pip3 install --user psutil
 ```
+> **NOTE:** The switch `--user` may have to be omitted with a virtual envitonment.
 
 ## Install on Ubuntu & MacOS
 
@@ -142,8 +143,9 @@ Instead, the *EOSFactory* library can be used as a staring point for user's exte
 You can install the PyPi of *EOSFactory* with the `pip3` command:
 
 ```bash
-pip3 install eosfactory-tokenika --user
+pip3 install --user eosfactory-tokenika
 ```
+> **NOTE:** The switch `--user` may have to be omitted with a virtual environment. 
 
 Those two versions, GitHub and PyPi are identical in terms of codebase, while they differ in their folder structure.
 
