--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -78,7 +78,7 @@ As a result, a global (in the current script) variable called `master` (or whate
 master.info()
 ```
 
->**NOTE:** The name `master` is just a name of a variable, not the actual name of the account created on the blockchain. The actual (physical) name of the account is `str(master)`.
+>**NOTE:** The name `master` is just a name of a variable, not the actual name of the account created on the blockchain. The actual (physical) name of the account is `repr(master)`.
 
 You don't need to worry about locking or unlocking the wallet, managing its password or importing private keys into it. All of this is being taken care of by EOS Factory behind the scenes.
 
@@ -105,7 +105,7 @@ Again, a global (in the current script) variable, this time called `charlie`, is
 charlie.info()
 ```
 
->**NOTE:** If you don't specify the `account_name` parameter in `create_account()` which is the third parameter, a random name is applied, which is useful on a public testnet where extra restrictions apply. You can see it: `str(charlie)`
+>**NOTE:** If you don't specify the `account_name` parameter in `create_account()` which is the third parameter, a random name is applied, which is useful on a public testnet where extra restrictions apply. You can see it: `repr(charlie)`
 
 However, if you want to assign a specific name to an account, you can still do it, for example:
 
