eosjs installer ready, all tested

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -299,14 +299,14 @@ import eosfactory.core.setup as setup
 
 ### Verify command lines
 
-Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it makes sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_lines` sets the debugging status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
+Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it makes sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.IS_PRINT_COMMAND_LINES` sets the debugging status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
 
 ```python
         import eosfactory.core.setup as setUp   ## added
-        setup.is_print_command_lines = True      ## added
+        setup.IS_PRINT_COMMAND_LINES = True      ## added
         smart.build()
         smart.deploy()
-        setup.is_print_command_lines = False     ## added
+        setup.IS_PRINT_COMMAND_LINES = False     ## added
 ```
 
 Now, if you run the script, you can see raw bash commands that can be inspected and tried:
@@ -319,7 +319,7 @@ WASM file writen to file:
 ######## command line sent to cleos:
 /usr/bin/cleos --url http://127.0.0.1:8888 set contract kswquviprmbi /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd build/_wslqwjvacdyugodewiyd.wasm build/_wslqwjvacdyugodewiyd.abi
 ```
-Note that there is another facility, corresponding to the `eosfactory.core.setup.is_print_command_lines` setting: it is `eosfactory.core.setup.is_save_command_lines`. If set, all the command lines are printed to the file `command_lines.txt` in the current working directory.
+Note that there is another facility, corresponding to the `eosfactory.core.setup.IS_PRINT_COMMAND_LINES` setting: it is `eosfactory.core.setup.IS_SAVE_COMMAND_LINES`. If set, all the command lines are printed to the file `command_lines.txt` in the current working directory.
 
 ### Verify communication with cleos
 
@@ -327,14 +327,14 @@ EOSFactory offers another debugging tool: printing requests send by `cleos` to `
 
 ```python
         import eosfactory.core.setup as setUp   ## added
-        setup.is_print_command_lines = True      ## added
-        setup.is_print_request = True           ## added
-        # setup.is_print_response = True        ## volume printout
+        setup.IS_PRINT_COMMAND_LINES = True      ## added
+        setup.IS_PRINT_REQUEST = True           ## added
+        # setup.IS_PRINT_RESPONSE = True        ## volume printout
         smart.build()
         smart.deploy()
-        setup.is_print_request = False          ## added
-        setup.is_print_command_lines = False     ## added
-        setup.is_print_response = False         ## added
+        setup.IS_PRINT_REQUEST = False          ## added
+        setup.IS_PRINT_COMMAND_LINES = False     ## added
+        setup.IS_PRINT_RESPONSE = False         ## added
 ```
 
 ## Subsequent installations
