eosjs get is ready; all tested

--- a/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
+++ b/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
@@ -58,7 +58,7 @@ def test():
         "hi", {"user":alice}, 
         permission=(alice, Permission.ACTIVE))
 
-    assert("alice" in DEBUG())
+    assert "alice" in DEBUG()
 
     stop()
 
