--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -200,6 +200,6 @@ To run standardized unit tests navigate to `Terminal > Run Task > Unittest`:
 
 You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. Among other things, it allows you to inspect the context of any code element, including its definition and declaration.
 
-![](../images/intelisense.png)
+![](../images/intellisense.png)
 
 >**NOTE:** For that to work you'll need to install the C/C++ IntelliSense extension in VSC.
