restoration point, all tested

--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -12,6 +12,7 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be combined 
     `
     "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
     `<br><br>
+We recommend equipping VSCode with the extension *EOSIDE*, available from the *Marketplace*.
 Alternatively, you can execute the command `bash` in the terminal.
 
 - We assume that you have [cmake](https://cmake.org/) installed.
