--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -12,6 +12,7 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be used to d
     `
     "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
     `<br><br>
+We recommend equipping VSCode with the extension *EOSIDE*, available from the *Marketplace*.
 Alternatively, you can execute the command `bash` in the terminal.
 
 ## The problems with public testnet
@@ -132,8 +133,13 @@ python3 -m eosfactory.testnets
 As a result, you should get a list similar to this:
 
 ```bash
-myjungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
-mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
+             testnet name:  account_name @ url
+=========================: ============= @ =========================
+                   JUNGLE:  hhidd2ekxrye @ http://145.239.133.201:8888
+                    KYLIN:  xlg3pao3idlq @ http://145.239.133.201:9999
+                  JUNGLE1:  5jejduh2w2cb @ http://145.239.133.201:8888
+                  JUNGLE2:  5jejduh2w2cb @ http://145.239.133.201:8888
+   _145_239_133_201_8888_:  yvngxrjzbf3w @ http://145.239.133.201:8888
 ```
 
 ## Running remote testnet tests
@@ -150,11 +156,12 @@ During the initial run of a unit test, the master account associated with a give
 
 However, during subsequent runs those accounts are reused, which saves you a lot of hassle with managing those accounts and constantly having to refund them. As described above, this is possible because all newly created accounts are internally cached by *EOSFactory* and their random names are mapped to stable variable names.
 
-Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts:
+Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts: associated
 
 ```bash
 python3 tests/tic_tac_toe.py myjungle -r
 ```
+>**WARNING:** The `-r` switch removes all persistance files associated with the testnet, namely: the default wallet, object name map, password map. Moreover, the testnet is lost if it does not include private keys. (Testnet includes private keys if it is created with the command `python3 -m eosfactory.register_testnet` with `-p` switch.)
 
 ## Utilizing public testnet in an *ad hoc* mode
 
@@ -172,4 +179,3 @@ In our case the command looks like this:
 ```bash
 python3 tests/tic_tac_toe.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
-
