improve to support amax

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -145,7 +145,7 @@ You can install the PyPi of *EOSFactory* with the `pip3` command:
 ```bash
 pip3 install --user eosfactory-tokenika
 ```
-> **NOTE:** The switch `--user` may have to be omitted with a virtual environment. 
+> **NOTE:** The switch `--user` may have to be omitted with a virtual environment.
 
 Those two versions, GitHub and PyPi are identical in terms of codebase, while they differ in their folder structure.
 
@@ -203,7 +203,7 @@ pip3 uninstall eosfactory-tokenika
 
 ### Nodeos version error
 
-There is a bug in `eosio nodeos` executable that makes it to response erratically. 
+There is a bug in `eosio nodeos` executable that makes it to response erratically.
 The command `python3 -m eosfactory.config` attempts to verify the version of the EOSIO installation, which is quite frequently unsuccessful and results in the following error message:
 
 ```bash
@@ -254,8 +254,8 @@ The current configuration of EOSFactory:
         "/usr/opt/eosio.cdt/1.6.1/include/eosiolib/contracts"
     ],
     "EOSIO_GENESIS_JSON": "/home/cartman/.local/share/eosio/nodeos/config/genesis.json",
-    "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
-    "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
+    "AMAX_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
+    "AMAX_KEY_PUBLIC": "AM6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
     "EOSIO_SHARED_MEMORY_SIZE_MB": "300",
     "EOSIO_VERSION": [
         "1.8.0"
@@ -315,7 +315,7 @@ Now, if you run the script, you can see raw bash commands that can be inspected 
 ```bash
 ######## command line sent to eosio-cpp:
 /usr/bin/eosio-cpp -I=/mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd/src/_wslqwjvacdyugodewiyd.cpp:
-WASM file writen to file: 
+WASM file writen to file:
     /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd/build/_wslqwjvacdyugodewiyd.wasm
 ######## command line sent to cleos:
 /usr/bin/cleos --url http://127.0.0.1:8888 set contract kswquviprmbi /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd build/_wslqwjvacdyugodewiyd.wasm build/_wslqwjvacdyugodewiyd.abi
